--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600&family=Urbanist:wght@100;200;300;400;500&display=swap');
+
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Urbanist', sans-serif;
+    font-family: 'Poppins',sans-serif;
     box-sizing: border-box;
 }
+
 
 
 .navbar-container{
