--- a/style.css
+++ b/style.css
@@ -1,202 +1,180 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600&family=Urbanist:wght@100;200;300;400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600&family=Urbanist:wght@100;200;300;400;500&display=swap");
 
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins',sans-serif;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
 }
 
-
-
-.navbar-container{
-    background-color:#eb4034;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 10px;
-    padding: 10px;
-    margin: 0;
+.navbar-container {
+  background-color: #eb4034;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
 }
 
-.top-name{
-    font-size: 45px;
+.top-name {
+  font-size: 30px;
+  flex: 1;
 }
-
 
 .left-navbar {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 20px;
-    background-color: #eb4034;
-    margin: 0;
-
+  flex: 2;
+  display: flex;
+  justify-content: space-around;
 }
 
-.left-navbar a{
-    text-decoration:none;
-    color:white;
+.left-navbar a {
+  text-decoration: none;
+  color: white;
 }
 
-.left-navbar a:hover{
-    color: black;
+.left-navbar a:hover {
+  color: black;
 }
 
-.about{
-    padding: 20px;
-    width: 100%;
-    height: 40vh;
-    
-
-    
+.about {
+  padding: 20px;
+  width: 100%;
+  height: 40vh;
 }
 
-.about p{
-    font-size: 30px;
+.about p {
+  font-size: 30px;
 }
 
-.about h1{
-    font-size: 30px;
-    display: flex;
-    justify-content: center;
-    padding: 5px;
+.about h1 {
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  padding: 5px;
 }
 
-.hobbies{
-    font-size: 17px;
-     padding: 20px;
-     
+.hobbies {
+  font-size: 17px;
+  padding: 20px;
 }
 
-.hobbies h1{
-    display:flex;
-    justify-content: center;
-
+.hobbies h1 {
+  display: flex;
+  justify-content: center;
 }
 
-.hobbies p{
-    font-size: 30px
+.hobbies p {
+  font-size: 30px;
 }
 
-.personal-links{
-    padding: 20px;
-    margin:0;
-    width: 100%;
-    height: 40vh;
-    background-color: #eb4034;
-    display: flex;
-    flex-direction: column;
-
-
+.personal-links {
+  padding: 20px;
+  margin: 0;
+  width: 100%;
+  height: 40vh;
+  background-color: #eb4034;
+  display: flex;
+  flex-direction: column;
 }
 
-.personal-links a{
-    padding: 5px;
+.personal-links a {
+  padding: 5px;
 }
 
-#personal-link-header{
-    padding-bottom: 10px;
+#personal-link-header {
+  padding-bottom: 10px;
 }
 
-#piazza,#github,#linkedin,#twitter {
-    text-decoration: none;
-    width:50px;
-    height: 70px;
-    background-color: #eb4034;
-    color:white;
-    padding: 5px;
-    margin:10px
+#piazza,
+#github,
+#linkedin,
+#twitter {
+  text-decoration: none;
+  width: 50px;
+  height: 70px;
+  background-color: #eb4034;
+  color: white;
+  padding: 5px;
+  margin: 10px;
 }
-
 
 .lists-style {
-    padding: 10px;
+  padding: 10px;
 
-    background-color: rgb(27, 26, 26);
-    color: aliceblue;
-
+  background-color: rgb(27, 26, 26);
+  color: aliceblue;
 }
-.lists-style li{
-    padding: 5px;
-    list-style: none;
-}
-
-
-.fav-quote{
-    color:#e4f1f0;
-    padding: 10px;
-
-
+.lists-style li {
+  padding: 5px;
+  list-style: none;
 }
 
-#quote{
-   
+.fav-quote {
+  color: #e4f1f0;
+  padding: 10px;
 }
 
-#quote p{
-    font-size: 25px;
-    padding: 30px;
+#quote {
 }
 
-.image-section-container{
-    padding: 10px;
-    display: flex;
-    justify-content: center;
+#quote p {
+  font-size: 25px;
+  padding: 30px;
 }
 
-.image-section img{
-    padding: 20px;
-}
-.image-section h1{
-    display: flex;
-    justify-content: center;
+.image-section-container {
+  padding: 10px;
+  display: flex;
+  justify-content: center;
 }
 
-button{
-    padding: 10px;
-    background-color: #eb4034;
-    color:white;
-    font-size: 20px;
-    cursor: pointer;
-    border: none;
-    border-radius: 5%;
+.image-section img {
+  padding: 20px;
+}
+.image-section h1 {
+  display: flex;
+  justify-content: center;
 }
 
-button:hover{
-    color:black;
+button {
+  padding: 10px;
+  background-color: #eb4034;
+  color: white;
+  font-size: 20px;
+  cursor: pointer;
+  border: none;
+  border-radius: 5%;
 }
 
-.table-style{
-    margin-bottom: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 30px;
-    width: 100%;
-    background-color:white;
-   
-
+button:hover {
+  color: black;
 }
 
-.table-style td,tr,th{
-    padding: 10px;
-    background: rgb(115, 218, 236);
- 
-    
+.table-style {
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+  width: 100%;
+  background-color: white;
 }
 
-#cls-sch{
-    display: flex;
-    justify-content: center;
-    padding: 5px;
-
+.table-style td,
+tr,
+th {
+  padding: 10px;
+  background: rgb(115, 218, 236);
 }
 
-footer{
-    background-color: rgb(160, 224, 240);
-    padding: 5px;
-    color:white;
+#cls-sch {
+  display: flex;
+  justify-content: center;
+  padding: 5px;
+}
+
+footer {
+  background-color: rgb(160, 224, 240);
+  padding: 5px;
+  color: white;
 }
