--- a/style.css
+++ b/style.css
@@ -5,11 +5,13 @@
   padding: 0;
   font-family: "Poppins", sans-serif;
   box-sizing: border-box;
+  text-decoration: none;
+
 }
 
 .navbar-container {
-  background-color: #eb4034;
-  color: white;
+  /* background-color: #eb4034; */
+  color: black;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -29,7 +31,7 @@
 
 .left-navbar a {
   text-decoration: none;
-  color: white;
+  color: black;
   font-size: 15px;
 }
 
@@ -37,22 +39,43 @@
   color: black;
 }
 
+/* About me section*/
+
 .about {
-  padding: 20px;
-  width: 100%;
-  height: 40vh;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.aboutme-img{
+  padding: 50px;
+  margin-right: 50px;
+}
+
+.aboutme-info{
+  display: flex;
+  flex-direction: column;
+  width: 600px;
+  flex-wrap: wrap;
+
 }
 
 .about p {
   font-size: 30px;
 }
 
+
+
+
+/* 
 .about h1 {
   font-size: 30px;
   display: flex;
   justify-content: center;
   padding: 5px;
-}
+} */
 
 .hobbies {
   font-size: 17px;
@@ -73,7 +96,6 @@
   margin: 0;
   width: 100%;
   height: 40vh;
-  background-color: #eb4034;
   display: flex;
   flex-direction: column;
 }
@@ -93,17 +115,13 @@
   text-decoration: none;
   width: 50px;
   height: 70px;
-  background-color: #eb4034;
-  color: white;
   padding: 5px;
   margin: 10px;
 }
 
 .lists-style {
   padding: 10px;
-
-  background-color: rgb(27, 26, 26);
-  color: aliceblue;
+  color: black;
 }
 .lists-style li {
   padding: 5px;
@@ -111,12 +129,10 @@
 }
 
 .fav-quote {
-  color: #e4f1f0;
+  color: black;
   padding: 10px;
 }
 
-#quote {
-}
 
 #quote p {
   font-size: 25px;
