--- a/css/style1.css
+++ b/css/style1.css
@@ -148,6 +148,7 @@ header {
 
 .nav__list {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -158,7 +159,7 @@ header {
 
 .nav__list a {
     text-decoration: none;
-    width: 200px;
+    width: 150px;
     color: black;
 
 }
